feat[vm]: 调整查询代码